tests/reject/fail_import_namespace.tk
import std/io::println

fn main() -> i32 {
    // This should fail because 'io' namespace is not imported, only symbol 'printf' is.
    io::println("This should fail compile")
    return 0
}
